chaged ResultPage button container to grid as the hover animation was causing a layout bug when using flex and justify-content: space-between

--- a/frontend/src/components/result-page/ResultPage.css
+++ b/frontend/src/components/result-page/ResultPage.css
@@ -61,9 +61,9 @@
 
 .resultpage-button-container {
   padding-top: 15px;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
+  margin-left: 200px;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
   width: 80%;
 }
 
